many kms tests - dmesg-warn/dmesg-fail/abort - Failed to read source OUI
<7> [495.889087] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:259:DDI TC2/PHY G]
<7> [495.889147] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:261:DP-MST A]
<7> [495.889208] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:262:DP-MST B]
<7> [495.889271] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:263:DP-MST C]
<7> [495.889333] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:264:DP-MST D]
<7> [495.889393] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:271:DDI TC3/PHY H]
<7> [495.889454] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:275:DDI TC4/PHY I]
<7> [495.889514] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:277:DP-MST A]
<7> [495.889574] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:278:DP-MST B]
<7> [495.889633] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:279:DP-MST C]
<7> [495.889693] xe 0000:03:00.0: [drm:intel_modeset_verify_disabled [xe]] [ENCODER:280:DP-MST D]
<7> [495.889751] xe 0000:03:00.0: [drm:gen9_dbuf_slices_update [xe]] Updating dbuf slices to 0xf
<7> [495.889888] xe 0000:03:00.0: [drm:intel_dbuf_mbus_join_update [xe]] Changing mbus joined: no -> yes (pipe: *)
<7> [495.889951] xe 0000:03:00.0: [drm:intel_dbuf_mdclk_cdclk_ratio_update [xe]] Updating dbuf ratio to 4 (mbus joined: yes)
<7> [496.144582] xe 0000:03:00.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: Too many retries, giving up. First error: -6
<3> [496.144629] xe 0000:03:00.0: [drm] *ERROR* Failed to read source OUI
<7> [496.160509] xe 0000:03:00.0: [drm:icp_irq_handler [xe]] hotplug event received, stat 0x02000000, dig 0x000088a8, pins 0x00000400, long 0x00000400
<7> [496.160503] xe 0000:03:00.0: [drm:intel_power_well_enable [xe]] enabling AUX_TC2
<7> [496.160971] xe 0000:03:00.0: [drm:intel_hpd_irq_handler [xe]] digital hpd on [ENCODER:259:DDI TC2/PHY G] - long
<7> [496.161386] xe 0000:03:00.0: [drm:intel_hpd_irq_handler [xe]] Received HPD interrupt on PIN 10 - cnt: 10
<7> [496.161857] xe 0000:03:00.0: [drm:intel_dp_hpd_pulse [xe]] got hpd irq on [ENCODER:259:DDI TC2/PHY G] - long
<7> [496.168043] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: Base DPCD: 12 14 c4 81 01 00 01 81 02 02 06 00 00 00 80
<7> [496.168115] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: DPCD: 14 1e c4 81 01 00 01 81 02 02 06 00 00 00 81
<7> [496.168204] xe 0000:03:00.0: [drm:i915_hotplug_work_func [xe]] running encoder hotplug functions
<7> [496.168591] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: Base DPCD: 12 14 c4 81 01 00 01 81 02 02 06 00 00 00 80
<7> [496.168675] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: DPCD: 14 1e c4 81 01 00 01 81 02 02 06 00 00 00 81
<7> [496.168715] xe 0000:03:00.0: [drm:i915_hotplug_work_func [xe]] Connector DP-2 (pin 10) received hotplug event. (retry 0)
<7> [496.169784] xe 0000:03:00.0: [drm:intel_dp_init_lttpr_and_dprx_caps [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] LTTPR common capabilities: 00 00 00 00 00 00 00 00
<7> [496.171877] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: Base DPCD: 12 14 c4 81 01 00 01 81 02 02 06 00 00 00 80
<7> [496.171935] xe 0000:03:00.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY G: DPCD: 14 1e c4 81 01 00 01 81 02 02 06 00 00 00 81
<7> [496.172356] xe 0000:03:00.0: [drm:intel_dp_start_link_train [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] Using LINK_BW_SET value 14
<7> [496.173433] xe 0000:03:00.0: [drm:intel_dp_set_signal_levels [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] 8b/10b, lanes: 4, vswing levels: 0/0/0/0, pre-emphasis levels: 0/0/0/0
<7> [496.174018] xe 0000:03:00.0: [drm:intel_dp_program_link_training_pattern [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] Using DP training pattern TPS1
<7> [496.175871] xe 0000:03:00.0: [drm:intel_dp_get_adjust_train [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] 8b/10b, lanes: 4, vswing request: 1/1/1/1, pre-emphasis request: 0/0/0/0
<7> [496.176219] xe 0000:03:00.0: [drm:intel_dp_set_signal_levels [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] 8b/10b, lanes: 4, vswing levels: 1/1/1/1, pre-emphasis levels: 0/0/0/0
<7> [496.178154] xe 0000:03:00.0: [drm:intel_dp_get_adjust_train [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] 8b/10b, lanes: 4, vswing request: 2/2/2/2, pre-emphasis request: 0/0/0/0
<7> [496.178492] xe 0000:03:00.0: [drm:intel_dp_set_signal_levels [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] 8b/10b, lanes: 4, vswing levels: 2/2/2/2, pre-emphasis levels: 0/0/0/0
<7> [496.180558] xe 0000:03:00.0: [drm:intel_dp_link_train_phy [xe]] [CONNECTOR:260:DP-2][ENCODER:259:DDI TC2/PHY G][DPRX] Clock recovery OK